# project

./: CMakeLists.txt  Makefile.txt  pairs.cpp
.cache/clangd/index/: catch.hpp.6E21267674206817.idx  doctest.cpp.38EE721B19B912FD.idx  doctest.cpp.EC0368A771F39ACA.idx  doctest.h.4F29CB791B7232DD.idx  doctest.h.739C48EF851176F8.idx  lib.cpp.7530B13080363244.idx  lib.hpp.E16510CD024691B7.idx  main.cpp.63164A118CCFFC64.idx  pairs.cpp.A27A8876BA4B07A8.idx  test.cpp.7F3EC36589CE1437.idx  tree.cpp.659D9A81DBD392DE.idx  tree.hpp.132905105971DB1D.idx  tree_test.cpp.E6DA9B56AC0D63DD.idx
src/: CMakeLists.txt  Makefile.txt  lib.cpp  lib.hpp  main.cpp  test.cpp
